--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <h1>Revaz Kapanadze</h1>
         <p>
-            <span class="contact-item">Phone: +995 577-603-716</span> |
+            <span class="contact-item">Phone: +995 577-603-716</span>
+        </p>
+        <p>
             <a href="https://github.com/rkapanadze">GitHub</a> |
             <a href="https://linkedin.com">LinkedIn</a> |
             <a href="mailto:rkapanadze98@gmail.com">Gmail</a>
