fix linkedin link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
         <p>
             <a href="https://github.com/rkapanadze">GitHub</a> |
-            <a href="https://linkedin.com">LinkedIn</a> |
+            <a href="https://www.linkedin.com/in/revaz-kapanadze-780172187/">LinkedIn</a> |
             <a href="mailto:rkapanadze98@gmail.com">Gmail</a>
         </p>
     </header>
