--- a/index.html
+++ b/index.html
@@ -21,30 +21,55 @@
         </p>
     </header>
 
+    <!-- Summary -->
+    <section class="section">
+        <h2>SUMMARY</h2>
+        <p>
+            Results-driven Backend Software Engineer with 3+ years of experience developing scalable, high-performance
+            systems using C#, .NET Core, ASP.NET Core and modern architectural patterns (Microservices, Clean
+            Architecture, CQRS). Skilled in asynchronous programming, parallel processing, and multithreading to build
+            efficient, thread-safe applications. Experienced in designing distributed systems, implementing secure
+            transaction logic, optimizing backend performance, leveraging Unit testing libraries to match TDD
+            approach. </p>
+    </section>
+
     <!-- Skills -->
     <section class="section">
         <h2>SKILLS</h2>
         <div class="skills-list">
             <div class="skills-category">
-                <strong>Languages & Frameworks:</strong> C#, JavaScript, TypeScript, HTML, CSS
+                <strong>Languages & Frameworks:</strong>
+                C#, .NET Core (5, 8, 3.1), ASP.NET Core, Blazor
             </div>
             <div class="skills-category">
-                <strong>Architectural Patterns:</strong> OOP, SOLID, CQRS, Mediator, Clean Architecture, Microservices,
-                Monolithic Architecture, Serverless
+                <strong>Architectural Patterns:</strong>
+                OOP, SOLID, CQRS, Mediator, Clean Architecture, Microservices, Monolithic Architecture, Serverless,
+                Repository Pattern
             </div>
             <div class="skills-category">
-                <strong>Databases:</strong> SQL, PL/SQL, MS SQL Server, Redis, MongoDB, Dapper, DynamoDB
+                <strong>Databases:</strong>
+                SQL (MySQL, PostgreSQL, MS SQL Server, PL/SQL), MongoDB, DynamoDB, Redis
             </div>
             <div class="skills-category">
-                <strong>Tools & Libraries:</strong> .NET Core (5, 8, 3.1), React, Node.js, AJAX, JQuery, ExtJS, EF Core,
-                Hangfire, RabbitMQ, Docker, WCF, AWS CDK, AWS Lambda, API Gateway, Postman, Jest, React Testing Library,
-                Blazor, AWS Cognito
+                <strong>Tools & Libraries:</strong>
+                AWS (Lambda, API Gateway, Cognito, CDK, etc.), RabbitMQ, Kafka, Dapper, EF Core, Hangfire, Docker,
+                Kubernetes, WCF, Postman
             </div>
             <div class="skills-category">
-                <strong>Other Skills:</strong> Asynchronous Programming, Parallel Processing, Unit Testing (xUnit,
-                NUnit), Version Control (Git, GitHub), Continuous Deployment (AWS CodePipeline), Monitoring and
-                Debugging (CloudWatch Logs, CloudWatch Logs Insights), Automated Testing, Manual Testing, Agile Scrum,
-                Collaboration Tools (Jira, Confluence, Teams, Slack, Discord)
+                <strong>CI/CD:</strong>
+                AWS CodePipeline, GitHub Actions, GitLab CI, TeamCity, Jenkins
+            </div>
+            <div class="skills-category">
+                <strong>Monitoring & Logging:</strong>
+                CloudWatch Logs Insights, OpenSearch, Graylog, Serilog, Loki
+            </div>
+            <div class="skills-category">
+                <strong>Other Technologies:</strong>
+                JavaScript, TypeScript, Node.js, React
+            </div>
+            <div class="skills-category">
+                <strong>Other Skills:</strong>
+                Asynchronous Programming, Multithreading, Parallel Processing, Algorithms, Transaction Processing
             </div>
         </div>
     </section>
@@ -60,19 +85,37 @@
             <p class="job-title">Software Engineer <span class="year">AUG 2023 – Present</span></p>
             <ul>
                 <li>
-                    <strong>CardModule:</strong> A system dedicated to processing transactions, ensuring efficient management of transaction logic for seamless and reliable financial operations. Designed with a microservices architecture, it features 15 APIs and worker processes created as separate projects for handling background tasks, <strong>asynchronous programming</strong>, and <strong>parallel processing</strong>. Utilized <strong>C#</strong>, <strong>.NET Core</strong>, <strong>Dapper</strong>, <strong>SQL Server</strong>, and <strong>RabbitMQ</strong>.
+                    <strong>CardModule:</strong> A system for processing transactions, ensuring efficient transaction
+                    logic for reliable financial operations. Designed with a microservices architecture featuring 15
+                    APIs and worker processes for handling background tasks, <strong>asynchronous programming</strong>,
+                    and <strong>parallel processing</strong>. Technologies used include <strong>C#</strong>, <strong>.NET
+                    Core</strong>, <strong>Dapper</strong>, <strong>SQL Server</strong>, and <strong>RabbitMQ</strong>.
                 </li>
                 <li>
-                    <strong>Loyalty:</strong> A rewards system for customer loyalty campaigns, automating reward distribution based on transaction activity. Developed using <strong>C#</strong> and <strong>.NET 8</strong> with a monolithic architecture, <strong>CQRS</strong>, and the <strong>Mediator pattern</strong>. Used <strong>Hangfire</strong> for background job processing, <strong>Entity Framework Core</strong> for database interactions, and <strong>Docker</strong> for containerization.
+                    <strong>Loyalty:</strong> A customer loyalty rewards system automating reward distribution based on
+                    transaction activity. Developed using <strong>C#</strong> and <strong>.NET 8</strong> with a
+                    monolithic architecture, <strong>CQRS</strong>, and the <strong>Mediator pattern</strong>. Utilized
+                    <strong>Hangfire</strong> for background job processing, <strong>Entity Framework Core</strong> for
+                    database management, and <strong>Docker</strong> for containerization.
                 </li>
                 <li>
-                    <strong>CSS:</strong> A comprehensive banking system for streamlining banking operations and enhancing customer service. Developed with <strong>C#</strong> and <strong>.NET Core 3.1</strong>, using <strong>Stored Procedures</strong> and <strong>Functions</strong>, <strong>ExtJS</strong> for the frontend, and transitioning from a monolithic to a microservices architecture.
+                    <strong>CSS:</strong> A comprehensive banking system for streamlining operations and enhancing
+                    customer service, transitioning from a monolithic to a microservices architecture. Built with
+                    <strong>C#</strong> and <strong>.NET Core 3.1</strong>, using <strong>Stored Procedures</strong>,
+                    <strong>Functions</strong>, and <strong>ExtJS</strong> for the frontend.
                 </li>
                 <li>
-                    <strong>CardTransactions:</strong> A project responsible for making actual transactions, ensuring secure and efficient processing of financial operations. Developed using <strong>C#</strong> and <strong>.NET 5</strong>, it uses <strong>Entity Framework Core</strong> and is <strong>asynchronous</strong> and <strong>thread-safe</strong> to handle multiple tasks concurrently and prevent duplicate transactions. Also integrated with a <strong>WCF service</strong> for executing transactions.
+                    <strong>CardTransactions:</strong> A project ensuring secure and efficient processing of financial
+                    transactions. Developed using <strong>C#</strong> and <strong>.NET 5</strong>, with <strong>Entity
+                    Framework Core</strong>, utilizing <strong>asynchronous</strong> and <strong>thread-safe</strong>
+                    methods for concurrent task handling and preventing duplicate transactions. Integrated with a
+                    <strong>WCF service</strong> for transaction execution.
                 </li>
                 <li>
-                    <strong>Other Projects:</strong> Contributed to various projects including <strong>P2PPayments</strong>, <strong>MoneyRequest</strong>, <strong>MoneyPot</strong>, <strong>PublicTransport</strong>, <strong>KoronaPay</strong>, and <strong>ECom</strong>, assisting in their development and maintenance.
+                    <strong>Other Projects:</strong> Contributed to several projects including
+                    <strong>P2PPayments</strong>, <strong>MoneyRequest</strong>, <strong>MoneyPot</strong>, <strong>PublicTransport</strong>,
+                    <strong>KoronaPay</strong>, and <strong>ECom</strong>, assisting in their development and
+                    maintenance.
                 </li>
             </ul>
         </article>
@@ -83,56 +126,57 @@
             <p class="job-title">Software Engineer <span class="year">AUG 2024 – Present</span></p>
             <ul>
                 <li>
-                    <strong>Backend Development:</strong> Contributed to the creation and maintenance of the Winter
-                    Comics backend, built using <strong>Serverless Node.js</strong>. Responsible for managing API
-                    routing and logic through <strong>API Gateway</strong> and AWS Lambda functions. Assisted in
-                    deploying and managing infrastructure using <strong>AWS CDK</strong>, ensuring smooth integration of
-                    <strong>Lambda</strong>, <strong>DynamoDB</strong>, and other AWS resources. Created and tested new
-                    API endpoints, integrated them with the frontend, and used <strong>Postman</strong> and AWS Console
-                    for thorough testing and debugging. Worked with <strong>AWS CodePipeline</strong> for continuous
-                    deployment, ensuring that changes from GitHub were automatically deployed to the production
-                    environment. Utilized <strong>CloudWatch Logs</strong> and <strong>CloudWatch Logs Insights</strong>
-                    for efficient monitoring and debugging, writing custom queries to filter and analyze logs for
-                    errors. Implemented <strong>AWS Cognito</strong> for authorization and user management.
+                    <strong>Backend Development:</strong> Contributed to the creation and maintenance of Winter Comics'
+                    backend, using <strong>Serverless Node.js</strong>. Managed API routing and logic with <strong>API
+                    Gateway</strong> and AWS Lambda functions. Assisted in deploying and managing infrastructure with
+                    <strong>AWS CDK</strong>, integrating <strong>Lambda</strong>, <strong>DynamoDB</strong>, and other
+                    AWS resources. Developed and tested new API endpoints and integrated them with the frontend.
+                    Utilized <strong>AWS CodePipeline</strong> for continuous deployment, ensuring smooth production
+                    updates. Employed <strong>CloudWatch Logs</strong> and <strong>CloudWatch Logs Insights</strong> for
+                    monitoring and debugging, and implemented <strong>AWS Cognito</strong> for user authorization and
+                    management.
                 </li>
                 <li>
-                    <strong>Frontend Development:</strong> Developed and maintained the frontend of Winter Comics using
-                    modern web technologies such as <strong>React</strong>, <strong>Redux</strong>, and <strong>TypeScript</strong>.
-                    Implemented responsive design principles to ensure a seamless user experience across different
-                    devices. Collaborated with the design team to create intuitive and visually appealing user
-                    interfaces. Used tools like <strong>Figma</strong> and <strong>Adobe XD</strong> for prototyping and
-                    design. Conducted thorough testing of the frontend using <strong>Jest</strong> and <strong>React
-                    Testing Library</strong>. Debugged and resolved issues to ensure a smooth user experience.
+                    <strong>Frontend Development:</strong> Developed and maintained the Winter Comics frontend using
+                    modern web technologies like <strong>React</strong>, <strong>Redux</strong>, and
+                    <strong>TypeScript</strong>. Applied responsive design principles for a seamless user experience
+                    across devices. Collaborated with design teams using <strong>Figma</strong> and <strong>Adobe
+                    XD</strong> for prototyping and design. Conducted frontend testing with <strong>Jest</strong> and
+                    <strong>React Testing Library</strong> to ensure optimal user experience.
                 </li>
             </ul>
         </article>
 
-
-
-        <!--Bank of Georgia -->
+        <!-- Bank of Georgia -->
         <article class="job-item">
             <h3>Bank of Georgia | <span class="location">Tbilisi, GEO</span></h3>
             <p class="job-title">Software Engineer <span class="year">Feb 2021 – Aug 2023</span></p>
             <ul>
                 <li>
-                    <strong>HRMS:</strong> Developed an internal Human Resource Management System (HRMS) primarily utilized by HR personnel but also accessed by all employees for various HR-related functions. The project was written using <strong>Clean Architecture</strong>, with the frontend developed in <strong>Blazor</strong>. The database utilized <strong>PL/SQL</strong> and included migrations for database management.
+                    <strong>HRMS:</strong> Developed an internal Human Resource Management System (HRMS) used by HR
+                    personnel and employees. The system was built using <strong>Clean Architecture</strong> and
+                    developed with <strong>Blazor</strong> for the frontend. The backend utilized
+                    <strong>PL/SQL</strong> and included database migrations for seamless management.
                 </li>
                 <li>
-                    <strong>Screening:</strong> Designed and implemented an application for employee registration and background checks, ensuring thorough vetting of new hires by identifying potential issues.
+                    <strong>Screening:</strong> Designed and implemented an application for employee registration and
+                    background checks, ensuring thorough vetting of new hires.
                 </li>
             </ul>
             <p class="job-title">Quality Assurance Engineer <span class="year">Nov 2020 – Feb 2021</span></p>
             <ul>
                 <li>
-                    <strong>BOnline:</strong> Worked on the business internet banking platform, the largest and most important project at the Bank of Georgia. Conducted comprehensive testing to ensure functionality, performance, and security. Utilized automated testing tools and manual testing techniques to identify and resolve defects, ensuring high-quality software delivery.
+                    <strong>BOnline:</strong> Worked on the business internet banking platform, conducting comprehensive
+                    testing for functionality, performance, and security. Utilized automated testing tools and manual
+                    techniques to identify and resolve defects.
                 </li>
                 <li>
-                    <strong>BOGPay:</strong> Contributed to the payment platform project by performing thorough testing to ensure secure and efficient processing of financial transactions. Identified and resolved issues to maintain the integrity and reliability of the payment system.
+                    <strong>BOGPay:</strong> Contributed to testing the payment platform project, ensuring secure and
+                    efficient processing of financial transactions while resolving issues to maintain system integrity
+                    and reliability.
                 </li>
             </ul>
         </article>
-
-
 
     </section>
 
