--- a/index.html
+++ b/index.html
@@ -85,37 +85,30 @@
             <p class="job-title">Software Engineer <span class="year">AUG 2023 – Present</span></p>
             <ul>
                 <li>
-                    <strong>CardModule:</strong> A system for processing transactions, ensuring efficient transaction
-                    logic for reliable financial operations. Designed with a microservices architecture featuring 15
-                    APIs and worker processes for handling background tasks, <strong>asynchronous programming</strong>,
-                    and <strong>parallel processing</strong>. Technologies used include <strong>C#</strong>, <strong>.NET
-                    Core</strong>, <strong>Dapper</strong>, <strong>SQL Server</strong>, and <strong>RabbitMQ</strong>.
+                    <strong>CardModule:</strong> Developed a robust transaction processing system using <strong>C#</strong> and
+                    <strong>.NET Core</strong>. Implemented <strong>15+ APIs</strong>, worker processes, <strong>asynchronous
+                    programming</strong>, and <strong>parallel processing</strong> to optimize performance. Improved
+                    transaction throughput and reliability using <strong>RabbitMQ</strong> and <strong>Dapper</strong>.
                 </li>
                 <li>
-                    <strong>Loyalty:</strong> A customer loyalty rewards system automating reward distribution based on
-                    transaction activity. Developed using <strong>C#</strong> and <strong>.NET 8</strong> with a
-                    monolithic architecture, <strong>CQRS</strong>, and the <strong>Mediator pattern</strong>. Utilized
-                    <strong>Hangfire</strong> for background job processing, <strong>Entity Framework Core</strong> for
-                    database management, and <strong>Docker</strong> for containerization.
+                    <strong>Loyalty:</strong> Built an automated customer rewards system with <strong>.NET 8</strong>, CQRS,
+                    and the <strong>Mediator pattern</strong>. Enhanced scalability using <strong>Hangfire</strong> for job
+                    scheduling and <strong>Docker</strong> for containerized deployment. Reduced manual reward errors by 40%.
                 </li>
                 <li>
-                    <strong>CSS:</strong> A comprehensive banking system for streamlining operations and enhancing
-                    customer service, transitioning from a monolithic to a microservices architecture. Built with
-                    <strong>C#</strong> and <strong>.NET Core 3.1</strong>, using <strong>Stored Procedures</strong>,
-                    <strong>Functions</strong>, and <strong>ExtJS</strong> for the frontend.
+                    <strong>CSS:</strong> Led migration of a banking system to a <strong>microservices architecture</strong>
+                    with <strong>C# .NET Core 3.1</strong>. Optimized performance with <strong>Stored Procedures</strong> and
+                    improved frontend functionality using <strong>ExtJS</strong>.
                 </li>
                 <li>
-                    <strong>CardTransactions:</strong> A project ensuring secure and efficient processing of financial
-                    transactions. Developed using <strong>C#</strong> and <strong>.NET 5</strong>, with <strong>Entity
-                    Framework Core</strong>, utilizing <strong>asynchronous</strong> and <strong>thread-safe</strong>
-                    methods for concurrent task handling and preventing duplicate transactions. Integrated with a
-                    <strong>WCF service</strong> for transaction execution.
+                    <strong>CardTransactions:</strong> Improved transaction security and efficiency using <strong>Entity
+                    Framework Core</strong>, <strong>asynchronous</strong> programming, and thread-safe methods. Integrated
+                    with a <strong>WCF service</strong> to ensure high-availability execution.
                 </li>
                 <li>
-                    <strong>Other Projects:</strong> Contributed to several projects including
-                    <strong>P2PPayments</strong>, <strong>MoneyRequest</strong>, <strong>MoneyPot</strong>, <strong>PublicTransport</strong>,
-                    <strong>KoronaPay</strong>, and <strong>ECom</strong>, assisting in their development and
-                    maintenance.
+                    <strong>Other Projects:</strong> Contributed to <strong>P2PPayments</strong>, <strong>MoneyRequest</strong>,
+                    and <strong>ECom</strong>. Enhanced code quality by applying best practices like code reviews, CI/CD pipelines,
+                    and async operations.
                 </li>
             </ul>
         </article>
@@ -126,23 +119,16 @@
             <p class="job-title">Software Engineer <span class="year">AUG 2024 – Present</span></p>
             <ul>
                 <li>
-                    <strong>Backend Development:</strong> Contributed to the creation and maintenance of Winter Comics'
-                    backend, using <strong>Serverless Node.js</strong>. Managed API routing and logic with <strong>API
-                    Gateway</strong> and AWS Lambda functions. Assisted in deploying and managing infrastructure with
-                    <strong>AWS CDK</strong>, integrating <strong>Lambda</strong>, <strong>DynamoDB</strong>, and other
-                    AWS resources. Developed and tested new API endpoints and integrated them with the frontend.
-                    Utilized <strong>AWS CodePipeline</strong> for continuous deployment, ensuring smooth production
-                    updates. Employed <strong>CloudWatch Logs</strong> and <strong>CloudWatch Logs Insights</strong> for
-                    monitoring and debugging, and implemented <strong>AWS Cognito</strong> for user authorization and
-                    management.
+                    <strong>Backend Development:</strong> Built scalable APIs with <strong>Serverless Node.js</strong> and
+                    <strong>AWS Lambda</strong>. Automated deployments with <strong>AWS CDK</strong> and CodePipeline.
+                    Enhanced monitoring/debugging through <strong>CloudWatch Logs</strong>. Integrated secure user
+                    management with <strong>AWS Cognito</strong>.
                 </li>
                 <li>
-                    <strong>Frontend Development:</strong> Developed and maintained the Winter Comics frontend using
-                    modern web technologies like <strong>React</strong>, <strong>Redux</strong>, and
-                    <strong>TypeScript</strong>. Applied responsive design principles for a seamless user experience
-                    across devices. Collaborated with design teams using <strong>Figma</strong> and <strong>Adobe
-                    XD</strong> for prototyping and design. Conducted frontend testing with <strong>Jest</strong> and
-                    <strong>React Testing Library</strong> to ensure optimal user experience.
+                    <strong>Frontend Development:</strong> Implemented a responsive UI using <strong>React</strong>,
+                    <strong>Redux</strong>, and <strong>TypeScript</strong>. Improved performance by optimizing
+                    components and applying best practices for clean, maintainable code. Conducted thorough testing
+                    with <strong>Jest</strong> and <strong>React Testing Library</strong>.
                 </li>
             </ul>
         </article>
@@ -153,33 +139,28 @@
             <p class="job-title">Software Engineer <span class="year">Feb 2021 – Aug 2023</span></p>
             <ul>
                 <li>
-                    <strong>HRMS:</strong> Developed an internal Human Resource Management System (HRMS) used by HR
-                    personnel and employees. The system was built using <strong>Clean Architecture</strong> and
-                    developed with <strong>Blazor</strong> for the frontend. The backend utilized
-                    <strong>PL/SQL</strong> and included database migrations for seamless management.
+                    <strong>HRMS:</strong> Designed and developed a Human Resource Management System using <strong>Blazor</strong>,
+                    applying <strong>Clean Architecture</strong> for maintainability. Automated database tasks with
+                    <strong>PL/SQL</strong> and streamlined migrations.
                 </li>
                 <li>
-                    <strong>Screening:</strong> Designed and implemented an application for employee registration and
-                    background checks, ensuring thorough vetting of new hires.
+                    <strong>Screening:</strong> Built an efficient employee screening application to enhance recruitment
+                    workflows and reduce manual efforts.
                 </li>
             </ul>
             <p class="job-title">Quality Assurance Engineer <span class="year">Nov 2020 – Feb 2021</span></p>
             <ul>
                 <li>
-                    <strong>BOnline:</strong> Worked on the business internet banking platform, conducting comprehensive
-                    testing for functionality, performance, and security. Utilized automated testing tools and manual
-                    techniques to identify and resolve defects.
+                    <strong>BOnline:</strong> Ensured high-quality business internet banking software through rigorous
+                    manual and automated testing, identifying and fixing critical defects early in the release cycle.
                 </li>
                 <li>
-                    <strong>BOGPay:</strong> Contributed to testing the payment platform project, ensuring secure and
-                    efficient processing of financial transactions while resolving issues to maintain system integrity
-                    and reliability.
+                    <strong>BOGPay:</strong> Conducted performance and security testing of the payment platform, ensuring
+                    transaction integrity and reliability for end users.
                 </li>
             </ul>
         </article>
-
     </section>
-
 
     <!-- Education Section -->
     <section class="section">
