--- a/index.html
+++ b/index.html
@@ -39,37 +39,42 @@
         <div class="skills-list">
             <div class="skills-category">
                 <strong>Languages & Frameworks:</strong>
-                C#, .NET Core (5, 8, 3.1), ASP.NET Core, Blazor
-            </div>
-            <div class="skills-category">
-                <strong>Architectural Patterns:</strong>
-                OOP, SOLID, CQRS, Mediator, Clean Architecture, Microservices, Monolithic Architecture, Serverless,
-                Repository Pattern
-            </div>
-            <div class="skills-category">
-                <strong>Databases:</strong>
-                SQL (MySQL, PostgreSQL, MS SQL Server, PL/SQL), MongoDB, DynamoDB, Redis
-            </div>
-            <div class="skills-category">
-                <strong>Tools & Libraries:</strong>
-                AWS (Lambda, API Gateway, Cognito, CDK, etc.), RabbitMQ, Kafka, Dapper, EF Core, Hangfire, Docker,
-                Kubernetes, WCF, Postman
-            </div>
-            <div class="skills-category">
-                <strong>CI/CD:</strong>
-                AWS CodePipeline, GitHub Actions, GitLab CI, TeamCity, Jenkins
-            </div>
-            <div class="skills-category">
-                <strong>Monitoring & Logging:</strong>
-                CloudWatch Logs Insights, OpenSearch, Graylog, Serilog, Loki
+                C#, ASP.NET Core (.NET Core & Framework)
             </div>
             <div class="skills-category">
                 <strong>Other Technologies:</strong>
-                JavaScript, TypeScript, Node.js, React
+                JavaScript, TypeScript, Node.js, React, Blazor, HTML/CSS
+            </div>
+            <div class="skills-category">
+                <strong>Architectural Patterns:</strong>
+                OOP, SOLID, CQRS, Mediator, Clean Architecture, Microservices, Vertical Slice Architecture, Monolithic
+                Architecture, Serverless, Repository Pattern
+            </div>
+            <div class="skills-category">
+                <strong>Databases:</strong>
+                SQL (MySQL, PostgreSQL, MS SQL Server, PL/SQL, SQLite – Procedures, Functions, Views, Triggers, CTEs),
+                MongoDB, DynamoDB, ElasticSearch, Cosmos DB, Redis
+            </div>
+            <div class="skills-category">
+                <strong>Tools & Libraries:</strong>
+                FluentValiadtion, MediatR, Swagger/OpenAPI, MassTransit, RabbitMQ, Kafka, Dapper, EF Core, Hangfire,
+                Docker,
+                Kubernetes, WCF, Postman, AWS (Lambda, API Gateway, Cognito, CDK, etc.)
+            </div>
+            <div class="skills-category">
+                <strong>CI/CD:</strong>
+                Azure DevOps Pipelines, AWS CodePipeline, GitHub Actions, GitLab CI, TeamCity, Jenkins
+            </div>
+            <div class="skills-category">
+                <strong>Monitoring & Logging:</strong>
+                CloudWatch Logs Insights, OpenSearch, Graylog, Serilog, Loki, Seq, ELK Stack (Elasticsearch, Logstash,
+                Kibana)
             </div>
             <div class="skills-category">
                 <strong>Other Skills:</strong>
-                Asynchronous Programming, Multithreading, Parallel Processing, Algorithms, Transaction Processing
+                Asynchronous Programming, Multithreading, Parallel Processing, Transaction Processing, Unit
+                Testing (xUnit, NUnit, MSTest), Authentication & Authorization (JWT, OAuth2, Auth0 Microsoft Identity,
+                Refresh Token), Localization/Globalization, Agile (Scrum, Kanban)
             </div>
         </div>
     </section>
@@ -85,29 +90,38 @@
             <p class="job-title">Software Engineer <span class="year">AUG 2023 – Present</span></p>
             <ul>
                 <li>
-                    <strong>CardModule:</strong> Developed a robust transaction processing system using <strong>C#</strong> and
+                    <strong>CardModule:</strong> Developed a robust transaction processing system using
+                    <strong>C#</strong> and
                     <strong>.NET Core</strong>. Implemented <strong>15+ APIs</strong>, worker processes, <strong>asynchronous
                     programming</strong>, and <strong>parallel processing</strong> to optimize performance. Improved
                     transaction throughput and reliability using <strong>RabbitMQ</strong> and <strong>Dapper</strong>.
                 </li>
                 <li>
-                    <strong>Loyalty:</strong> Built an automated customer rewards system with <strong>.NET 8</strong>, CQRS,
-                    and the <strong>Mediator pattern</strong>. Enhanced scalability using <strong>Hangfire</strong> for job
-                    scheduling and <strong>Docker</strong> for containerized deployment. Reduced manual reward errors by 40%.
+                    <strong>Loyalty:</strong> Built an automated customer rewards system with <strong>.NET 8</strong>,
+                    CQRS,
+                    and the <strong>Mediator pattern</strong>. Enhanced scalability using <strong>Hangfire</strong> for
+                    job
+                    scheduling and <strong>Docker</strong> for containerized deployment. Reduced manual reward errors by
+                    40%.
                 </li>
                 <li>
-                    <strong>CSS:</strong> Led migration of a banking system to a <strong>microservices architecture</strong>
-                    with <strong>C# .NET Core 3.1</strong>. Optimized performance with <strong>Stored Procedures</strong> and
+                    <strong>CSS:</strong> Led migration of a banking system to a <strong>microservices
+                    architecture</strong>
+                    with <strong>C# .NET Core 3.1</strong>. Optimized performance with <strong>Stored
+                    Procedures</strong> and
                     improved frontend functionality using <strong>ExtJS</strong>.
                 </li>
                 <li>
                     <strong>CardTransactions:</strong> Improved transaction security and efficiency using <strong>Entity
-                    Framework Core</strong>, <strong>asynchronous</strong> programming, and thread-safe methods. Integrated
+                    Framework Core</strong>, <strong>asynchronous</strong> programming, and thread-safe methods.
+                    Integrated
                     with a <strong>WCF service</strong> to ensure high-availability execution.
                 </li>
                 <li>
-                    <strong>Other Projects:</strong> Contributed to <strong>P2PPayments</strong>, <strong>MoneyRequest</strong>,
-                    and <strong>ECom</strong>. Enhanced code quality by applying best practices like code reviews, CI/CD pipelines,
+                    <strong>Other Projects:</strong> Contributed to <strong>P2PPayments</strong>,
+                    <strong>MoneyRequest</strong>,
+                    and <strong>ECom</strong>. Enhanced code quality by applying best practices like code reviews, CI/CD
+                    pipelines,
                     and async operations.
                 </li>
             </ul>
@@ -116,10 +130,11 @@
         <!-- Winter Comics -->
         <article class="job-item">
             <h3>Winter Comics | <span class="location">San Francisco, USA (REMOTE)</span></h3>
-            <p class="job-title">Software Engineer <span class="year">AUG 2024 – Present</span></p>
+            <p class="job-title">Software Engineer <span class="year">AUG 2024 – April 2025</span></p>
             <ul>
                 <li>
-                    <strong>Backend Development:</strong> Built scalable APIs with <strong>Serverless Node.js</strong> and
+                    <strong>Backend Development:</strong> Built scalable APIs with <strong>Serverless Node.js</strong>
+                    and
                     <strong>AWS Lambda</strong>. Automated deployments with <strong>AWS CDK</strong> and CodePipeline.
                     Enhanced monitoring/debugging through <strong>CloudWatch Logs</strong>. Integrated secure user
                     management with <strong>AWS Cognito</strong>.
@@ -155,7 +170,8 @@
                     manual and automated testing, identifying and fixing critical defects early in the release cycle.
                 </li>
                 <li>
-                    <strong>BOGPay:</strong> Conducted performance and security testing of the payment platform, ensuring
+                    <strong>BOGPay:</strong> Conducted performance and security testing of the payment platform,
+                    ensuring
                     transaction integrity and reliability for end users.
                 </li>
             </ul>
